k8s-manifests/vcf-dumper-ws/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vcf-dumper-ws
spec:
  replicas: 3  # 1 replica per node across the 3-node cluster, matching staging
  template:
    spec:
      containers:
      - name: vcf-dumper-ws
        image: dockerhub.ebi.ac.uk/ebivariation/vcf-dumper
        imagePullPolicy: Always
